--- a/app/src/main/res/layout/recycler_myitem.xml
+++ b/app/src/main/res/layout/recycler_myitem.xml
@@ -14,6 +14,8 @@
         android:src="@drawable/dummy_1"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        android:background="@drawable/bg_box2"
+        android:layout_margin="4dp"
         />
 
     <TextView
@@ -23,7 +25,7 @@
         android:text="새벽집 청담점"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="140dp"
         android:maxLines="1"
@@ -31,23 +33,24 @@
         />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_below="@id/tv_title"
+        android:background="@drawable/baseline_star_24"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="4dp"/>
+
+    <TextView
         android:id="@+id/tv_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5.0"
-        android:textSize="22sp"
+        android:textSize="18sp"
+        android:textColor="#FF0000"
         android:layout_below="@id/tv_title"
-        android:layout_marginLeft="140dp"
+        android:layout_marginLeft="165dp"
         android:layout_marginTop="4dp"/>
-
-
-    <RatingBar
-        android:id="@+id/rating_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_title"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
-        android:layout_marginLeft="175dp"/>
 
     <TextView
         android:id="@+id/tv_body"
