--- a/app/src/main/res/layout/recycler_myitem.xml
+++ b/app/src/main/res/layout/recycler_myitem.xml
@@ -13,16 +13,18 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="285dp"
+        android:layout_marginStart="275dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:adjustViewBounds="true"
-        android:background="@drawable/bg_box2"
         android:scaleType="centerCrop"
-        android:src="@drawable/dummy_1" />
+        android:src="@drawable/dummy_1"
+        android:background="@drawable/rounded_corners"
+
+        />
 
     <TextView
         android:id="@+id/tv_title"
@@ -45,7 +47,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
         android:layout_alignParentStart="true"
-
         android:layout_marginStart="38dp"
         android:layout_marginLeft="170dp"
         android:layout_marginTop="3dp"
