--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -121,7 +121,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btn_signup"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="회원가입"
