--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="24dp"/> <!-- 원하는 둥글기 조정 -->
-    <solid android:color="@android:color/white"/> <!-- 배경색 설정 -->
+    <corners android:radius="16dp"/> <!-- 모서리를 둥글게 처리 -->
+    <solid android:color="@android:color/transparent"/> <!-- 투명 배경 -->
 </shape>
