--- a/app/src/main/res/layout/recycler_myitem.xml
+++ b/app/src/main/res/layout/recycler_myitem.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layout_margin="8dp">
 
+    <!-- 회색 얇은 라인 추가 -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentTop="true"
+        android:background="#DEDEDE"/>
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv"
-        android:layout_width="120dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
+        android:scaleType="centerCrop"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="275dp"
+        android:layout_marginStart="290dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/dummy_1"
-        android:background="@drawable/rounded_corners"
+        app:shapeAppearanceOverlay="@style/Circle"
+        app:srcCompat="@drawable/dummy_3" />
 
-        />
+
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="263dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="140dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="새벽집 청담점"
         android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+
+         />
 
     <TextView
         android:id="@+id/tv_time"
@@ -51,6 +56,7 @@
         android:layout_marginLeft="170dp"
         android:layout_marginTop="3dp"
         android:text="2024-08-09 14:44:33"
+        android:textColor="#AFAFAF"
         android:textSize="14sp" />
 
     <TextView
@@ -59,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="24dp"
         android:layout_marginLeft="155dp"
         android:layout_marginTop="3dp"
         android:text="5"
@@ -71,26 +77,26 @@
         android:layout_height="14dp"
         android:layout_below="@id/tv_title"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="8dp"
         android:layout_marginLeft="140dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/baseline_star_24"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tv_body"
-        android:layout_width="263dp"
+        android:layout_width="270dp"
         android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/tv_time"
         android:layout_marginStart="6dp"
         android:layout_marginLeft="140dp"
-        android:layout_marginEnd="125dp"
+        android:layout_marginEnd="115dp"
         android:layout_marginBottom="4dp"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="고기가 맛있다. 정말 맛있다. 복음밥도 맛있다. 고기가 맛있다. 정말 맛있다. 복음밥도 맛있다.고기가 맛있다. 정말 맛있다. 복음밥도 맛있다 " />
+
+
 
 
 </RelativeLayout>
