--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.JJikgo" parent="Base.Theme.JJikgo" />
+
+    <style name="Circle">
+        <item name="cornerSize">20%</item>
+    </style>
+
 </resources>
