--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:name="com.naver.maps.map.MapFragment" />
 
-
     <EditText
         android:id="@+id/input"
         android:layout_width="300dp"
@@ -32,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/baseline_add_24"
+        app:iconTint="@color/white"
         android:src="@drawable/baseline_my_location_24"
         app:maxImageSize="35dp"
         app:fabCustomSize="50dp"
@@ -40,23 +41,18 @@
         android:layout_marginRight="24dp"
         />
 
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/add_memo_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.FloatingActionButton"
-        app:tint = "#FFFFFF"
+        android:layout_margin="16dp"
         android:backgroundTint="#2B5CBF"
-        android:src="@drawable/baseline_add_24"
-        app:fabSize="normal"
-        app:maxImageSize="35dp"
-        app:borderWidth="0dp"
+        android:elevation="5dp"
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="20dp"
+        android:text="메모하기"
+        android:textSize="16dp"
+        android:textColor="@color/white"
         />
-
-
 </RelativeLayout>
