--- a/app/src/main/res/layout/fragment_addmemo_bottomsheet.xml
+++ b/app/src/main/res/layout/fragment_addmemo_bottomsheet.xml
@@ -4,13 +4,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="8dp"
     >
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
@@ -21,13 +21,30 @@
             />
         <TextView
             android:id="@+id/address_tv"
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:text="서울 성동구 성수동 2가 284-50"
             android:textSize="15sp"
             />
+        <TextView
+            android:id="@+id/tv_delete"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:text="삭제하기"
+            android:textSize="16sp"
+            android:background="@drawable/bg_box_gray"
+            android:gravity="center"
+            android:visibility="invisible"
+            />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
 
     <RatingBar
         android:id="@+id/rating_bar"
@@ -39,6 +56,8 @@
         android:layout_gravity="center"
         />
 
+
+    </LinearLayout>
     <ImageView
         android:id="@+id/memo_image"
         android:layout_width="230dp"
@@ -93,7 +112,6 @@
             android:layout_margin="4dp"/>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
