--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -166,15 +166,14 @@
                     <TextView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:background="@drawable/baseline_thumb_up_off_alt_24"
+                        android:background="@drawable/ic_bookmark_filled"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="좋아요"
+                        android:text="스크랩 목록"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:layout_marginLeft="4dp"
                         />
                 </LinearLayout>
 
@@ -188,15 +187,6 @@
 
             </LinearLayout>
 
-
-
-            <Button
-                android:id="@+id/btn_logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="로그아웃"
-                android:layout_marginTop="16dp"
-                android:textColor="@color/white" />
 
 
 
