--- a/app/src/main/res/layout/fragment_yourlist.xml
+++ b/app/src/main/res/layout/fragment_yourlist.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="추천 목록보기"
+        app:title="공유 목록보기"
         app:titleCentered="true"
         app:navigationIcon="@drawable/ic_action_back" />
 
