나의 목록보기 - 카드뷰(1)

--- a/app/src/main/res/layout/fragment_mylist.xml
+++ b/app/src/main/res/layout/fragment_mylist.xml
@@ -11,14 +11,15 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="나의 목록보기"
+        app:title="내 목록보기"
+        app:titleCentered="true"
+        app:menu="@menu/toolbar_sort"
         app:navigationIcon="@drawable/ic_action_back" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
 
 
