--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,4 +11,8 @@
         <item name="cornerSize">15%</item>
     </style>
 
+    <style name="Circle2">
+        <item name="cornerSize">10%</item>
+    </style>
+
 </resources>
